# CJT

./: CJT.sln  CMakeLists.txt  CmakeLists.txt  README.md  cmakelists.txt
CJT/: CJT.cpp  CJT.h  CJT.vcxproj  CJT.vcxproj.filters  CJToKernel.cpp  CJToKernel.h
CJT/inc/: CJT.h  CJToKernel.h
cmake/: CJTConfig.cmake
examples/1_EditAtt/: CJTExample1.cpp  CMakeLists.txt
examples/2_CityToOcct/: CJTExample2.cpp  CMakeLists.txt  twobuildings_exported.city.json
examples/3_OcctToCity/: CJTExample3.cpp  CMakeLists.txt
examples/4_MoveObject/: CMakeLists.txt  twobuildings.city.json
